# CRESSim-Surgical-Robotics-Simulation

./: .gitignore  LICENSE  README.md  SERVER_EVALUATION_GUIDE.md  UBUNTU_SERVER_SETUP.md  evaluate_real_data.py  manage.py  pyproject.toml  quick_test.py  requirements.txt  run_evaluation.sh  run_pipeline.py  test_pipeline.py  test_structure.py
.github/workflows/: ci.yml
configs/: demos.yaml  env.yaml  paths.yaml  safety.yaml  train.yaml
data/cholec80/: .gitkeep
data/demos/: .gitkeep
data/endoscapes/: .gitkeep
data/kvasir_seg/: .gitkeep
data/logs/: .gitkeep
data/videos/: .gitkeep
src/envs/: curriculum.py  mock_env.py  real_env.py  unity_env.py  wrappers.py
src/eval/: benchmark.py  evaluator.py  metrics.py  plots.py  report.py
src/il/: __init__.py  bc_trainer.py  demos.py  filter_weight.py
src/pipeline/: __init__.py  data_handler.py  evaluator.py  pipeline.py  trainer.py
src/rl/: algo.py  buffers.py  ppo_trainer.py  rollout.py  safety_shield.py  train_loop.py
src/safety/: safety_shield.py
src/utils/: __init__.py  data.py  device.py  gpu.py  io.py  log.py  opex.py  seeding.py  sim.py  video.py
src/vision/: augment.py  encoders.py  pretrain.py  safety_seg.py
tests/: test_basic.py  test_demos.py  test_device.py  test_env_api.py  test_reward.py  test_safety.py
